--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,11 +5,12 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <service android:name=".service.AutoUpdateService"></service>
+<receiver android:name=".receiver.AutoUpdateReceiver"></receiver>
         <activity android:name=".activity.ChooseAreaActivity"
             android:label="@string/app_name">
             <intent-filter>
